# Signatory

./: .gitignore  .hcignore  README.md  agent.key  conductor-config.toml  default.nix
test/: index.js
ui/: hc-web-client-0.1.3.browser.min.map  index.html
zomes/signatory/: zome.json
zomes/signatory/code/: .hcbuild  Cargo.toml
zomes/signatory/code/src/: lib.rs
