[package]
name = "signatory"
version = "0.1.0"
authors = ["zo-el <joelulahanna@gmail.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
hdk = { path = "../../../holochain-rust/crates/hdk" }
holochain_wasm_utils = { path = "../../../holochain-rust/crates/wasm_utils" }
holochain_json_derive = "=0.0.17"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
